force-app/main/default/objects/POSAudit__c/POSAudit__c.object-meta.xml
<CustomObject>
    <description>request for an audit for POS End User</description>
    <label>POSAudit</label>
    <nameField>
        <label>POSAudit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POSAudit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>