force-app/main/default/objects/POSAudit__c/fields/Data_Team_Respons__c.field-meta.xml
<CustomField>
    <fullName>Data_Team_Respons__c</fullName>
    <label>Data Team Respons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>