force-app/main/default/objects/POSAudit__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <length>250</length>
    <type>Text</type>
</CustomField>