force-app/main/default/objects/POSAudit__c/fields/Reseller_Account__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Account__c</fullName>
    <label>Reseller Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>