force-app/main/default/objects/POSAudit__c/fields/Revenue_CY_Einstein_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Revenue_CY_Einstein_Analytics__c</fullName>
    <formula>Account__r.POS_CY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue CY Einstein Analytics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>