force-app/main/default/objects/POSAudit__c/fields/Revenue_Expected_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Expected_Current_Year__c</fullName>
    <label>Revenue Expected Current Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>