force-app/main/default/objects/POSAudit__c/fields/Sale_Date_Missing__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date_Missing__c</fullName>
    <label>Sale Date Missing</label>
    <type>Date</type>
</CustomField>