force-app/main/default/objects/POSAudit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Found and Updated</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Data Verified Correct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>